--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="DG Site - Diego Guimarães Martins">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web Curriculo de Diego Guimarães Martins criado com React.js"
     />
+    <meta content="http://dgsite.pessoal.ws" name="url">
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
